<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosContacto"
    >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:layout_centerHorizontal="true"
        android:theme="@style/TituloDatosContacto"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/LayoutPadre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        >

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNombre"
            android:theme="@style/DatosContacto"
            android:layout_marginLeft="10dp"

            />

        <TextView
            android:id="@+id/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/Nombre"
            android:textSize="9pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFecha"
            android:theme="@style/DatosContacto"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:id="@+id/Fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="9pt"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTelefono"
            android:theme="@style/DatosContacto"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/Telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Telefono"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="9pt"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvEmail"
            android:theme="@style/DatosContacto"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="9pt"
            />
    </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitulo"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDescripcion"
            android:theme="@style/DatosContacto"
            android:layout_marginLeft="10dp"
            />

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="9pt"
                />

        </LinearLayout>

    </LinearLayout>


        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btnEditarDatos"
            android:theme="@style/btnStyle"
            />


</RelativeLayout>